--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery-ui": "^1.12.1",
     "jquery-waypoints": "^2.0.5",
     "magnific-popup": "^1.1.0",
+    "serve": "^11.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
